# AnyPaste

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  release.yml
docs/: EN.md  FR.md
scripts/: generate-icon.mjs
src/: i18n.ts  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
