[package]
name = "anypaste"
version = "0.1.1"
description = "Elegant, local-first clipboard manager for macOS, Windows and Linux."
authors = ["AnyPaste contributors"]
edition = "2021"
license = "MIT"

[lib]
name = "anypaste_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
arboard = "3.4"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.5", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2.2"
uuid = { version = "1.11", features = ["v4", "serde"] }
